<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTeam1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main"
        android:hint="@string/team_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTeam1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTeam2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_2"
        android:hint="@string/team_2"
        app:layout_constraintStart_toStartOf="@id/tilTeam1Name"
        app:layout_constraintTop_toBottomOf="@id/tilTeam1Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTeam2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main"
        android:hint="@string/timer_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTeam2Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/stop_watch_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTime" />

    <Button
        android:id="@+id/btnBestTeamScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_team_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
</androidx.constraintlayout.widget.ConstraintLayout>
