<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false">

    <TextView
        android:id="@+id/tvTeam1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_result"
        android:layout_marginTop="@dimen/margin_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TEAMONE" />

    <TextView
        android:id="@+id/tvTeam2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTeam1Name"
        tools:text="TEAMTWO" />

    <TextView
        android:id="@+id/tvResultsScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/result_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/tvTeam1Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTeam1Name"
        tools:text="0 : 0" />

    <Button
        android:id="@+id/tvBestTeamScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/share_margin"
        android:layout_marginEnd="@dimen/share_margin"
        android:text="@string/best_team_scores"
        app:layout_constraintBottom_toTopOf="@+id/btnToMainScreen"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnToMainScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/share_margin"
        android:text="@string/to_main_screen"
        app:layout_constraintBottom_toTopOf="@+id/tvShare"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/share_margin"
        android:text="@string/share_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
